k8s/manifest/bootstrap/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    tailscale.com/ingress-class: tailscale
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
